# Builder_projects_CMake

./: .gitignore  README.md
000-small_project/: CMakeLists.txt  README.md
001-solution/: CMakeLists.txt  README.md
001-solution/project1/: CMakeLists.txt
001-solution/project1/src/: main.cpp
002-static_libs/: CMakeLists.txt
002-static_libs/build_scripts/: build_release.bat
002-static_libs/project1/: CMakeLists.txt  main.cpp
002-static_libs/static_lib1/: main_lib.cpp
003-shared_libs/: CMakeLists.txt
003-shared_libs/build_scripts/: build_debug.bat
003-shared_libs/project1/: CMakeLists.txt  main.cpp
003-shared_libs/shared_lib1/: CMakeLists.txt  main_sh_lib.cpp  main_sh_lib.h
003-shared_libs/static_lib1/: CMakeLists.txt  main_lib.cpp
004-add_sfml/: CMakeLists.txt
004-add_sfml/build_scripts/: build_release.bat
004-add_sfml/project1/: CMakeLists.txt
005-functions/: README.md  config.cmake
005-functions/build_scripts/: build_debug.bat  clean.bat
005-functions/project1/: CMakeLists.txt  main.cpp
006-many-developers/: CMakeLists.txt  README.md  config.cmake
006-many-developers/3TH_PARTY/: README.md
006-many-developers/build_scripts/: build_debug.bat  build_release.bat  clean.bat
006-many-developers/project1/: CMakeLists.txt
007-wx_base/: CMakeLists.txt  README.md  config.cmake
007-wx_base/3TH_PARTY/: README.md
007-wx_base/application/: Application.cpp  Application.h  CMakeLists.txt  README.md
007-wx_base/build_scripts/: build_debug.bat  build_release.bat  build_wx.bat
007-wx_base/project1/: Application.cpp  Application.h  CMakeLists.txt
007-wx_base/ui_design/: CMakeLists.txt  MainForm.cpp  MainForm.h  README.md
007-wx_base/ui_design/designer/: UIDesignData.cpp  UIDesignData.h  UI_DESIGN.fbp
008_PROJECTS_NINJA/: README.md  msys_install_packages.bat
008_PROJECTS_NINJA/.template_project/: CMakeLists.txt  env.bat
008_PROJECTS_NINJA/.template_project/build_scripts/: build_debug.bat  build_release.bat  clean.bat
008_PROJECTS_NINJA/.template_project/cmake_config/: boost.cmake  init_options.cmake  sfml.cmake  wxWidgets.cmake
008_PROJECTS_NINJA/.template_project/source/application/: CMakeLists.txt  TestClassA.cpp  TestClassA.h  main.cpp
