# CMakeLists.txt

cmake_minimum_required(VERSION 3.5)

# Имя рабочего решения (решение содержит подключаемые проекты)
project(solution)


# подключаем файл с функциями конфигурации решения
include(config.cmake)


###################################################################################################################################
# БАЗОВЫЕ И ПЕРВООЧЕРЕДНЫЕ ОПЦИИ КОМПИЛЯТОРА
setBaseCompillerOptions()

# версия стандарта языка C++ для компилятора
add_compile_options(-std=c++20 )


###################################################################################################################################
# ОПЦИИ СБОРКИ
setLibsSolutionOptions()


###################################################################################################################################
# СБОРКА

add_subdirectory(project1)



