# CMakeLists.txt

cmake_minimum_required(VERSION 3.5)

# Имя рабочего решения (решение содержит подключаемые проекты)
project(solution)


###################################################################################################################################
# БАЗОВЫЕ И ПЕРВООЧЕРЕДНЫЕ ОПЦИИ КОМПИЛЯТОРА
include(cmake_config/init_options.cmake)

# версия стандарта языка C++ для компилятора
add_compile_options(-std=c++20 )

###################################################################################################################################
# НАСТРОЙКИ СТОРОННИХ БИБЛИОТЕК

include(cmake_config/boost.cmake)



###################################################################################################################################
# СБОРКА

add_subdirectory(source)



